Bug 355395 - Advanced search on metadata, creation date, show wrong items
Summary: Advanced search on metadata, creation date, show wrong items
Status: RESOLVED FIXED
Alias: None
Product: krecipes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-15 21:34 UTC by Freek de Kruijf
Modified: 2016-03-01 14:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.2
Sentry Crash Report:


Attachments
screendump of Search -> Advanced -> Meta Data (66.73 KB, image/png)
2015-11-15 21:38 UTC, Freek de Kruijf
Details
Screendump of Meta Data pop-up (19.67 KB, image/png)
2015-11-15 21:40 UTC, Freek de Kruijf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Freek de Kruijf 2015-11-15 21:34:42 UTC
Search -> Advanced -> Metadata -> Created one gets a calender and an item list with the items:
Today
Tomorrow
Next Week
Next Month
This is wrong, a creation date cannot be in the future, so it should be:
Today
Yesterday
Last Week
Last Month

Reproducible: Always
Comment 1 Freek de Kruijf 2015-11-15 21:38:33 UTC
Created attachment 95521 [details]
screendump of Search -> Advanced -> Meta Data

On this screen click on position of the arrow. The next pop-up will appear.
Comment 2 Freek de Kruijf 2015-11-15 21:40:05 UTC
Created attachment 95522 [details]
Screendump of Meta Data pop-up

This pop-up shows the wrong items, which should be items in past.
Comment 3 José Manuel Santamaría Lema 2016-03-01 14:54:47 UTC
Git commit 18392613ae3dac914c27c35833e09ec1fdc9ab94 by José Manuel Santamaría Lema.
Committed on 01/03/2016 at 14:53.
Pushed by joselema into branch 'master'.

Suggest only dates in the past in the date picker popup.
FIXED-IN: 2.2

M  +13   -10   src/widgets/kdatepickerpopup.cpp
M  +8    -5    src/widgets/kdatepickerpopup.h

http://commits.kde.org/krecipes/18392613ae3dac914c27c35833e09ec1fdc9ab94