Suggest only dates in the past in the date picker popup.

BUG: 355395
FIXED-IN: 2.2